<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ESCAPE</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_new_task">Done</string>
    <string name="today_label">Today</string>
    <string name="tomorrow_label">Tomorrow</string>
    <string name="thisweek_label">This week</string>
    <string name="someday_label">Someday</string>
    <string name="edit_button_description">Edit</string>
    <string name="delete_button_description">Delete</string>
    <string name="pomodoro_start">Start pomodoro</string>
    <string name="pomodoro_stop">Stop</string>
    <string name="remind_me">Remind me at</string>
    <string name="time_reminder">Time reminder</string>
    <string name="location_reminder">Location reminder</string>
    <string name="notification_done">Done</string>
    <string name="notification_snooze_time">Snooze 1h</string>
    <string name="notification_snooze_place">Next time</string>
    <string name="pick_time_label">Pick a time&#8230;</string>
    <string name="pick_day_label">Pick a day&#8230;</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="custom_category">Add new category&#8230;</string>
    <string name="nextweeksameday">Next</string>
    <string name="new_task">New Task</string>
    <string name="new_block">New Block</string>
    <string name="pick_caterory">Pick Cetegories</string>
    <string name="title_activity_new_block">New Block</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="location_hint">Location</string>
    <string name="mark_as_important">Mark as important</string>
    <string name="convert_to_event">Convert to event</string>
    <string name="api_key">AIzaSyDrot9omu_3zSYpm4tf6sw1x_jKWOB2MFc</string>
    <string name="event_not_saved">Title required, event was not saved</string>
    <string name="task_not_saved">Title required, task was not saved</string>
    <string name="no_save">Nothing will be saved without a title</string>
    <string name="nh_init">NotificationHandler initialized.</string>
    <string name="nh_not_init">NotificationHandler hasn\'t been initialized yet. Run init(FragmentActivity) when starting application.</string>
    <string name="nh_location_reminder_not_added">Couldn\'t add location reminder.</string>
    <string name="nh_location_reminder_not_removed">Couldn\'t remove location reminder.</string>
    <string name="gplay_services_available">Google Play services is available.</string>
    <string name="gplay_services_unavailable">Google Play services is unavailable.</string>
    <string name="geofence_connected">Connected to Location Services</string>
    <string name="geofence_disconnected">Disconnected from Location Services</string>
    <string name="geofence_add_success">Successfully added specified geofences</string>
    <string name="geofence_add_error">An error occured when adding specified geofences</string>
    <string name="geofence_remove_success">Successfully removed specified geofences</string>
    <string name="geofence_remove_error">An error occurred when removing specified geofences</string>
    <string name="back_button_hint">Press BACK one more time to exit</string>
    <string name="enter_custom_category">Enter a new category</string>
    <string name="about_menu_item">About</string>
    <string name="about_dialog_title">ESCAPE (v0.5)</string>
    <string name="about_dialog_header">Get organized</string>
    <string name="about_dialog_desc">Simple yet powerful planner tool to use for creating events, tasks, reminders and auto generated weekly schedules.</string>
    <string name="about_dialog_repo">Github: <a href="https://github.com/simonjrp/ESCAPE">ESCAPE</a></string>
    <string name="about_dialog_license">Licensed under: <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a></string>
    <string name="about_dialog_copyright">Copyright &#169; 2013</string>
    <string name="default_category_school">School</string>
    <string name="default_category_work">Work</string>
    <string name="default_category_spare_time">Spare time</string>
    <string name="autogenerated">Autogenerated</string>
    <string name="invalid_time_reminder">No reminder added. Time has already passed.</string>
    <string name="titleHint">Title</string>
    <string name="descriptionHint">Description</string>
    <string name="locationHint">Location</string>
    <string name="markAsImportant">Mark as important</string>
    <string name="convertToEvent">Convert to event</string>
    <string name="API_key">AIzaSyDrot9omu_3zSYpm4tf6sw1x_jKWOB2MFc</string>
    <string name="title_activity_pomodoro_service">PomodoroService</string>
    <string name="hello_world">Hello world!</string>
</resources>