<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/about_dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/textsize_medium"
        android:text="@string/about_dialog_header" />

    <TextView
        android:id="@+id/about_dialog_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_dialog_desc"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/about_dialog_repo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_dialog_repo"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/about_dialog_license"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_dialog_license" />

    <TextView android:id="@+id/about_dialog_copyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_dialog_copyright" />


</LinearLayout>